--- a/static/test.html
+++ b/static/test.html
@@ -5,6 +5,7 @@
 	<body>
 		<input type="button" id="score" value="Score" />
 		<input type="button" id="test" value="Test Me" />
+		<input type="button" id="new-game" value="Create Game" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script>
 			$(document).ready(function(){
@@ -46,7 +47,67 @@
 						error: function(){
 
 						}
-					})
+					});
+				});
+
+				$("#new-game").on("click", function(){
+					$.ajax({
+						url: "http://127.0.0.1:5000/game",
+						type: "POST",
+						contentType: "application/json; charset=utf-8",
+						data: JSON.stringify({
+							  "teams": [
+							    {
+							      
+							      "players": [
+							        {
+							          "user_id": 1,
+							          "position": 1
+							        }, 
+							        {
+							          "user_id": 2,
+							          "position": 2
+							        }, 
+							        {
+							          "user_id": 3,
+							          "position": 3
+							        }, 
+							        {
+							          "user_id": 4,
+							          "position": 4
+							        }
+							      ]
+							    }, 
+							    {
+							      
+							      "players": [
+							        {
+							          "user_id": 5,
+							          "position": 1
+							        }, 
+							        {
+							          "user_id": 6,
+							          "position": 2
+							        }, 
+							        {
+							          "user_id": 7,
+							          "position": 3
+							        }, 
+							        {
+							          "user_id": 7,
+							          "position": 4
+							        }
+							      ]
+							    }
+							  ]
+							}),
+						success: function(){
+
+						},
+						error: function(){
+
+						}
+					});
 				});
 			});
 		</script>
