--- a/static/test.html
+++ b/static/test.html
@@ -9,6 +9,8 @@
 		<br>
 		<input type="text" placeholder="game id" id="delete-id" />
 		<input type="button" id="delete-button" value="Delete Game" />
+		<br>
+		<input type="button" id="create-user" value="Create User" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script>
 			$(document).ready(function(){
@@ -123,6 +125,27 @@
 					$.ajax({
 						url: "http://127.0.0.1:5000/game/" + del_id,
 						type: "DELETE",
+						success: function(){
+
+						}, 
+						error: function(){
+
+						}
+					})
+				});
+
+				$("#create-user").on("click", function(){
+					$.ajax({
+						url: "http://127.0.0.1:5000/user",
+						contentType: "application/json; charset=utf-8",
+						data: JSON.stringify({
+							name: "Kristina",
+							first_name: "Kristina",
+							last_name: "R",
+							birthday: "03/20/1990",
+							email: "testemail@domain.com"
+						}),
+						type: "POST",
 						success: function(){
 
 						}, 
