--- a/static/test.html
+++ b/static/test.html
@@ -10,7 +10,24 @@
 		<input type="text" placeholder="game id" id="delete-id" />
 		<input type="button" id="delete-button" value="Delete Game" />
 		<br>
-		<input type="button" id="create-user" value="Create User" />
+		<div>
+			<label for="user-name">Name:</label>
+			<input type="text" placeholder="name" id="user-name">
+			<label for="user-first-name">First Name:</label>
+			<input type="text" placeholder="first name" id="user-first-name">
+			<label for="user-last-name">Last Name:</label>
+			<input type="text" placeholder="last name" id="user-last-name">
+			<label for="user-birthday">Birthday:</label>
+			<input type="text" placeholder="mm/dd/yyyy" id="user-birthday">
+			<label for="user-email">Email:</label>
+			<input type="text" placeholder="example@gmail.com" id="user-email">
+			<input type="button" id="create-user" value="Create User" />
+		</div>
+		<div>
+			<label for="user-id">User ID:</label>
+			<input type="text" placeholder="1" id="user-id">
+			<input type="button" id="delete-user" value="Delete User" />
+		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script>
 			$(document).ready(function(){
@@ -70,7 +87,7 @@
 							          "position": 1
 							        }, 
 							        {
-							          "user_id": 2,
+							          "user_id": 8,
 							          "position": 2
 							        }, 
 							        {
@@ -99,7 +116,7 @@
 							          "position": 3
 							        }, 
 							        {
-							          "user_id": 7,
+							          "user_id": 9,
 							          "position": 4
 							        }
 							      ]
@@ -139,11 +156,11 @@
 						url: "http://127.0.0.1:5000/user",
 						contentType: "application/json; charset=utf-8",
 						data: JSON.stringify({
-							name: "Kristina",
-							first_name: "Kristina",
-							last_name: "R",
-							birthday: "03/20/1990",
-							email: "testemail@domain.com"
+							name: $("#user-name").val(),
+							first_name: $("#user-first-name").val(),
+							last_name: $("#user-last-name").val(),
+							birthday: $("#user-birthday").val(),
+							email: $("#user-email").val()
 						}),
 						type: "POST",
 						success: function(){
@@ -153,6 +170,19 @@
 
 						}
 					})
+				});
+
+				$("#delete-user").on("click", function(){
+					$.ajax({
+						url: "http://127.0.0.1:5000/users/" + $("#user-id").val(),
+						type: "DELETE",
+						success: function(){
+
+						},
+						error: function(){
+
+						}
+					});
 				});
 			});
 
