--- a/static/test.html
+++ b/static/test.html
@@ -153,7 +153,7 @@
 
 				$("#create-user").on("click", function(){
 					$.ajax({
-						url: "http://127.0.0.1:5000/user",
+						url: "http://127.0.0.1:5000/users",
 						contentType: "application/json; charset=utf-8",
 						data: JSON.stringify({
 							name: $("#user-name").val(),
